# Stock-market-simulation

./: CMakeLists.txt  README.md  input.json  simulation.cpp
example_cases/: input.json  output.json
helper/: CMakeLists.txt  input_parser.cpp  input_parser.h  price_generator.cpp  price_generator.h  stock_market.cpp  stock_market.h
